[gd_scene load_steps=6 format=3 uid="uid://ra67ahaj51js"]

[ext_resource type="Texture2D" uid="uid://d31byvxauykrq" path="res://art/world.png" id="1_345gc"]
[ext_resource type="Script" path="res://scripts/main-menu.gd" id="1_f8jwd"]

[sub_resource type="SystemFont" id="SystemFont_6fk22"]
font_names = PackedStringArray("Monospace")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_88ox7"]
texture = ExtResource("1_345gc")
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:0/0/terrains_peering_bit/right_side = 0
0:0/0/terrains_peering_bit/bottom_right_corner = 0
0:0/0/terrains_peering_bit/bottom_side = 0
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0/terrains_peering_bit/right_side = 0
1:0/0/terrains_peering_bit/bottom_right_corner = 0
1:0/0/terrains_peering_bit/bottom_side = 0
1:0/0/terrains_peering_bit/bottom_left_corner = 0
1:0/0/terrains_peering_bit/left_side = 0
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrain = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0/terrains_peering_bit/bottom_side = 0
2:0/0/terrains_peering_bit/bottom_left_corner = 0
2:0/0/terrains_peering_bit/left_side = 0
3:0/0 = 0
3:0/0/terrain_set = 0
3:0/0/terrain = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0/terrains_peering_bit/bottom_side = 0
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrain = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0/terrains_peering_bit/right_side = 0
0:1/0/terrains_peering_bit/bottom_right_corner = 0
0:1/0/terrains_peering_bit/bottom_side = 0
0:1/0/terrains_peering_bit/top_side = 0
0:1/0/terrains_peering_bit/top_right_corner = 0
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0/terrains_peering_bit/right_side = 0
1:1/0/terrains_peering_bit/bottom_right_corner = 0
1:1/0/terrains_peering_bit/bottom_side = 0
1:1/0/terrains_peering_bit/bottom_left_corner = 0
1:1/0/terrains_peering_bit/left_side = 0
1:1/0/terrains_peering_bit/top_left_corner = 0
1:1/0/terrains_peering_bit/top_side = 0
1:1/0/terrains_peering_bit/top_right_corner = 0
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0/terrains_peering_bit/bottom_side = 0
2:1/0/terrains_peering_bit/bottom_left_corner = 0
2:1/0/terrains_peering_bit/left_side = 0
2:1/0/terrains_peering_bit/top_left_corner = 0
2:1/0/terrains_peering_bit/top_side = 0
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/terrain = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0/terrains_peering_bit/bottom_side = 0
3:1/0/terrains_peering_bit/top_side = 0
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/terrain = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0/terrains_peering_bit/right_side = 0
0:2/0/terrains_peering_bit/top_side = 0
0:2/0/terrains_peering_bit/top_right_corner = 0
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/terrain = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0/terrains_peering_bit/right_side = 0
1:2/0/terrains_peering_bit/left_side = 0
1:2/0/terrains_peering_bit/top_left_corner = 0
1:2/0/terrains_peering_bit/top_side = 0
1:2/0/terrains_peering_bit/top_right_corner = 0
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/terrain = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0/terrains_peering_bit/left_side = 0
2:2/0/terrains_peering_bit/top_left_corner = 0
2:2/0/terrains_peering_bit/top_side = 0
3:2/0 = 0
3:2/0/terrain_set = 0
3:2/0/terrain = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0/terrains_peering_bit/top_side = 0
0:3/0 = 0
0:3/0/terrain_set = 0
0:3/0/terrain = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:3/0/terrains_peering_bit/right_side = 0
1:3/0 = 0
1:3/0/terrain_set = 0
1:3/0/terrain = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0/terrains_peering_bit/right_side = 0
1:3/0/terrains_peering_bit/left_side = 0
2:3/0 = 0
2:3/0/terrain_set = 0
2:3/0/terrain = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0/terrains_peering_bit/left_side = 0
3:3/0 = 0
3:3/0/terrain_set = 0
3:3/0/terrain = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_kgp6w"]
physics_layer_0/collision_layer = 1
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Boxes"
terrain_set_0/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
sources/0 = SubResource("TileSetAtlasSource_88ox7")

[node name="Main Menu" type="Node2D"]
script = ExtResource("1_f8jwd")

[node name="Camera" type="Camera2D" parent="."]

[node name="Spawn Points" type="Node" parent="."]

[node name="1" type="Node2D" parent="Spawn Points"]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CenterContainer" type="CenterContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -336.0
offset_top = -86.0
offset_right = 296.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "nanopark"
horizontal_alignment = 1

[node name="Keyboard Players" type="HBoxContainer" parent="UI/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="UI/CenterContainer/VBoxContainer/Keyboard Players"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = SubResource("SystemFont_6fk22")
text = "0 keyboard players"

[node name="Remove" type="Button" parent="UI/CenterContainer/VBoxContainer/Keyboard Players"]
layout_mode = 2
disabled = true
text = "remove"

[node name="Add" type="Button" parent="UI/CenterContainer/VBoxContainer/Keyboard Players"]
layout_mode = 2
text = "add"

[node name="Joystick Players" type="HBoxContainer" parent="UI/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="UI/CenterContainer/VBoxContainer/Joystick Players"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = SubResource("SystemFont_6fk22")
text = "0 joystick players"

[node name="Remove" type="Button" parent="UI/CenterContainer/VBoxContainer/Joystick Players"]
layout_mode = 2
disabled = true
text = "remove"

[node name="Add" type="Button" parent="UI/CenterContainer/VBoxContainer/Joystick Players"]
layout_mode = 2
text = "add"

[node name="HSeparator" type="HSeparator" parent="UI/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Container" type="VBoxContainer" parent="UI/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Load Ice Hockey" type="Button" parent="UI/CenterContainer/VBoxContainer/Container"]
layout_mode = 2
text = "Ice Hockey"

[node name="Load King of the Mountain" type="Button" parent="UI/CenterContainer/VBoxContainer/Container"]
layout_mode = 2
text = "King of the Mountain"

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
tile_set = SubResource("TileSet_kgp6w")
format = 2
layer_0/name = "foreground"
layer_0/tile_data = PackedInt32Array(589841, 131072, 2, 524305, 131072, 0, 589840, 65536, 2, 524304, 65536, 0, 589839, 65536, 2, 524303, 65536, 0, 589838, 65536, 2, 524302, 65536, 0, 589837, 65536, 2, 524301, 65536, 0, 589836, 65536, 2, 524300, 65536, 0, 589835, 65536, 2, 524299, 65536, 0, 589834, 65536, 2, 524298, 65536, 0, 589833, 65536, 2, 524297, 65536, 0, 589832, 65536, 2, 524296, 65536, 0, 589831, 65536, 2, 524295, 65536, 0, 589830, 65536, 2, 524294, 65536, 0, 589829, 65536, 2, 524293, 65536, 0, 589828, 65536, 2, 524292, 65536, 0, 589827, 65536, 2, 524291, 65536, 0, 589826, 65536, 2, 524290, 65536, 0, 589825, 65536, 2, 524289, 65536, 0, 589824, 65536, 2, 524288, 65536, 0, 655359, 65536, 2, 589823, 65536, 0, 655358, 65536, 2, 589822, 65536, 0, 655357, 65536, 2, 589821, 65536, 0, 655356, 65536, 2, 589820, 65536, 0, 655355, 65536, 2, 589819, 65536, 0, 655354, 65536, 2, 589818, 65536, 0, 655353, 65536, 2, 589817, 65536, 0, 655352, 65536, 2, 589816, 65536, 0, 655351, 65536, 2, 589815, 65536, 0, 655350, 65536, 2, 589814, 65536, 0, 655349, 65536, 2, 589813, 65536, 0, 655348, 65536, 2, 589812, 65536, 0, 655347, 65536, 2, 589811, 65536, 0, 655346, 65536, 2, 589810, 65536, 0, 655345, 65536, 2, 589809, 65536, 0, 655344, 65536, 2, 589808, 65536, 0, 655343, 65536, 2, 589807, 65536, 0, 655342, 0, 2, 589806, 0, 0)

[connection signal="pressed" from="UI/CenterContainer/VBoxContainer/Keyboard Players/Remove" to="." method="_on_remove_pressed"]
[connection signal="pressed" from="UI/CenterContainer/VBoxContainer/Keyboard Players/Add" to="." method="_on_add_pressed"]
[connection signal="pressed" from="UI/CenterContainer/VBoxContainer/Container/Load Ice Hockey" to="." method="_on_load_ice_hockey_pressed"]
[connection signal="pressed" from="UI/CenterContainer/VBoxContainer/Container/Load King of the Mountain" to="." method="_on_load_king_of_the_mountain_pressed"]
